--- a/index.html
+++ b/index.html
@@ -596,15 +596,15 @@
                                     <span>Золото</span>
                                 </div>
                             </td>
-                            <td>Анна Прекрасная</td>
+                            <td>-</td>
                             <td>
                                 <span class="wins-count">
                                     <i class="fas fa-trophy"></i>
-                                    12 побед
+                                    - побед
                                 </span>
                             </td>
                             <td>
-                                <a href="https://tagger.su/user/anna_beautiful" class="profile-link" target="_blank">
+                                <a href="https://tagger.su/" class="profile-link" target="_blank">
                                     Перейти <i class="fas fa-external-link-alt"></i>
                                 </a>
                             </td>
@@ -616,15 +616,15 @@
                                     <span>Серебро</span>
                                 </div>
                             </td>
-                            <td>Максим Идеальный</td>
+                            <td>-</td>
                             <td>
                                 <span class="wins-count">
                                     <i class="fas fa-medal"></i>
-                                    8 побед
+                                    - побед
                                 </span>
                             </td>
                             <td>
-                                <a href="https://tagger.su/user/max_perfect" class="profile-link" target="_blank">
+                                <a href="https://tagger.su/" class="profile-link" target="_blank">
                                     Перейти <i class="fas fa-external-link-alt"></i>
                                 </a>
                             </td>
@@ -636,15 +636,15 @@
                                     <span>Бронза</span>
                                 </div>
                             </td>
-                            <td>София Чародейка</td>
+                            <td>-</td>
                             <td>
                                 <span class="wins-count">
                                     <i class="fas fa-award"></i>
-                                    6 побед
+                                    - побед
                                 </span>
                             </td>
                             <td>
-                                <a href="https://tagger.su/user/sophia_magic" class="profile-link" target="_blank">
+                                <a href="https://tagger.su/" class="profile-link" target="_blank">
                                     Перейти <i class="fas fa-external-link-alt"></i>
                                 </a>
                             </td>
