--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                         <span>ЛУЧШЕЕ</span>
                     </div>
                     <div class="photo-container">
-                        <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="София - лучшее фото недели">
+                        <img src="https://media.tagger.su/uploads/photos/2026/01/sngine_c6131dcd9694a78dd1272b3eb6b12539.jpg" alt="София - лучшее фото недели">
                     </div>
                     <div class="photo-info">
                         <span>@таггер</span>
