--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                         <span>ЛАЙКИ</span>
                     </div>
                     <div class="photo-container">
-                        <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Анна - самое залайканное фото">
+                        <img src="https://media.tagger.su/uploads/photos/2026/01/sngine_00a05bca402c59cb4e97deb8ca85e65e.jpg" alt="Анна - самое залайканное фото">
                     </div>
                     <div class="photo-info">
                         <span>@таггер</span>
