--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                         <span>ЛАЙКИ</span>
                     </div>
                     <div class="photo-container">
-                        <img src="https://media.tagger.su/uploads/photos/2026/01/sngine_00a05bca402c59cb4e97deb8ca85e65e.jpg" alt="Анна - самое залайканное фото">
+                        <img src="." alt="ТУТ БУДЕТ ФОТО">
                     </div>
                     <div class="photo-info">
                         <span>@таггер</span>
@@ -534,7 +534,7 @@
                         <span>КОММЕНТАРИИ</span>
                     </div>
                     <div class="photo-container">
-                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w-800&q=80" alt="Максим - самое комментируемое фото">
+                        <img src="." alt="ТУТ БУДЕТ ФОТО">
                     </div>
                     <div class="photo-info">
                         <span>@таггер</span>
@@ -550,11 +550,11 @@
                         <span>ЛУЧШЕЕ</span>
                     </div>
                     <div class="photo-container">
-                        <img src="https://media.tagger.su/uploads/photos/2026/01/sngine_c6131dcd9694a78dd1272b3eb6b12539.jpg" alt="София - лучшее фото недели">
+                        <img src="." alt="ТУТ БУДЕТ ФОТО">
                     </div>
                     <div class="photo-info">
                         <span>@таггер</span>
-                        <span>выбор редакции</span>
+                        <span>ВЫБОР РЕДАКЦИИ</span>
                     </div>
                     <p style="margin-top:15px;color:var(--text-secondary);">описание</p>
                 </div>
