--- a/index.html
+++ b/index.html
@@ -807,12 +807,12 @@
                 <!-- ЗДЕСЬ ВСТАВЬТЕ ССЫЛКУ НА ФОТО АРТИСТА -->
                 <div class="artist-card fade-in">
                     <div class="artist-image-container">
-                        <img src="ВСТАВЬТЕ_ССЫЛКУ_СЮДА" alt="Новый артист" class="artist-image">
+                        <img src="https://sun9-15.userapi.com/s/v1/ig2/CkmAIADef0J1wgusx4Bq96bmFHm7Bu7EIGTsASsylARzU67FoZN7pvmqZOfREJy9vY2LOuEOAYDw3EOSBfhEPBii.jpg?quality=95&as=32x40,48x60,72x90,108x135,160x200,240x300,360x450,480x600,540x675,614x768&from=bu&cs=614x0" alt="Новый артист" class="artist-image">
                     </div>
                     <div class="artist-info">
-                        <h3 class="artist-name">Ищем таланты</h3>
-                        <p class="artist-members">Место для вас</p>
-                        <p class="artist-description">Мы постоянно ищем новые таланты. Если вы артист или группа, подавайте заявку через TAGGER.</p>
+                        <h3 class="artist-name">MoizeNeck</h3>
+                        <p class="artist-members">Almo Racafelli</p>
+                        <p class="artist-description">Исполнитель, чей рэп перерастает в мощное звучание метала и откровенный крик. В его текстах живёт боль, протест и изнурительная борьба с внутренними демонами.</p>
                     </div>
                 </div>
 
