--- a/index.html
+++ b/index.html
@@ -1289,19 +1289,19 @@
             <h2 class="section-title">КОНЦЕРТЫ</h2>
             <div class="events-grid">
                 <div class="event-card fade-in">
-                    <div class="event-date"><i class="fas fa-calendar-alt"></i> 02 февраля, 21:00</div>
-                    <h3 class="event-name">silvain GROUNDHOG DAY SHOW</h3>
-                    <p class="event-location">Rodeo Area, Лос-Сантос</p>
-                    <p>Большой сольный концерт на площади Родео. Ожидается аншлаг и особые гости. Билеты уже в продаже.</p>
+                    <div class="event-date"><i class="fas fa-calendar-alt"></i> -</div>
+                    <h3 class="event-name">-</h3>
+                    <p class="event-location">-</p>
+                    <p>-</p>
                 </div>
                 <div class="event-card fade-in">
-                    <div class="event-date"><i class="fas fa-calendar-alt"></i> 21 января, 21:00</div>
-                    <h3 class="event-name">silvain DEBUT</h3>
-                    <p class="event-location">Palazzo Restaurant, Лос-Сантос</p>
-                    <p>Громкий дебют в изысканной атмосфере ресторана Palazzo. Историческое событие для лейбла и группы.</p>
+                    <div class="event-date"><i class="fas fa-calendar-alt"></i> -</div>
+                    <h3 class="event-name">-</h3>
+                    <p class="event-location">-</p>
+                    <p>-</p>
                 </div>
                 <div class="event-card fade-in">
-                    <div class="event-date"><i class="fas fa-calendar-alt"></i> 15 марта, 20:00</div>
+                    <div class="event-date"><i class="fas fa-calendar-alt"></i> -</div>
                     <h3 class="event-name">-</h3>
                     <p class="event-location">-</p>
                     <p>-</p>
@@ -1318,12 +1318,12 @@
             <div class="artists-grid">
                 <div class="artist-card fade-in">
                     <div class="artist-image-container">
-                        <img src="https://sun9-41.userapi.com/s/v1/ig2/4OaaH4PrQ6-RXI-3eAUIoJfblX4bFpcUlqBXoOg990ru8erTw8zoktATDKocQfLYmKSYUt8VcbMpDRFDtbEWpq9y.jpg?quality=95&as=32x12,48x18,72x27,108x41,160x61,240x91,360x136,480x182,540x204,640x242,720x272,1080x409,1280x484,1440x545,2400x908&from=bu&cs=1280x0" alt="silvain" class="artist-image">
+                        <img src="-" alt="silvain" class="artist-image">
                     </div>
                     <div class="artist-info">
-                        <h3 class="artist-name">silvain</h3>
-                        <p class="artist-members">Lilith Silvain, Kenneth Preston, Wayne Fitzgerald</p>
-                        <p class="artist-description">Альтернативная рок-группа с уникальным саундом, сочетающим гранж, инди и шугейз-эстетику.</p>
+                        <h3 class="artist-name">Ищем таланты</h3>
+                        <p class="artist-members">Место для вас</p>
+                        <p class="artist-description">Мы постоянно ищем новые таланты. Если вы артист или группа, подавайте заявку через TAGGER.</p>
                     </div>
                 </div>
 
