--- a/index.html
+++ b/index.html
@@ -1318,7 +1318,7 @@
             <div class="artists-grid">
                 <div class="artist-card fade-in">
                     <div class="artist-image-container">
-                        <img src="-" alt="silvain" class="artist-image">
+                        <img src="-" alt="-" class="artist-image">
                     </div>
                     <div class="artist-info">
                         <h3 class="artist-name">Ищем таланты</h3>
