--- a/index.html
+++ b/index.html
@@ -1289,16 +1289,16 @@
             <h2 class="section-title">КОНЦЕРТЫ</h2>
             <div class="events-grid">
                 <div class="event-card fade-in">
-                    <div class="event-date"><i class="fas fa-calendar-alt"></i> -</div>
-                    <h3 class="event-name">-</h3>
-                    <p class="event-location">-</p>
-                    <p>-</p>
+                    <div class="event-date"><i class="fas fa-calendar-alt"></i> 21.02.26</div>
+                    <h3 class="event-name">SILVAIN SHOW</h3>
+                    <p class="event-location">площадь Родео, 9PM</p>
+                    <p>Второй большой сольный концерт группы SILVAIN после долгого затишья. Ожидается аншлаг и особые гости.</p>
                 </div>
                 <div class="event-card fade-in">
-                    <div class="event-date"><i class="fas fa-calendar-alt"></i> -</div>
-                    <h3 class="event-name">-</h3>
-                    <p class="event-location">-</p>
-                    <p>-</p>
+                    <div class="event-date"><i class="fas fa-calendar-alt"></i> 20.02.26</div>
+                    <h3 class="event-name">MoizeNeck SHOW</h3>
+                    <p class="event-location">RODEO COFFESHOP, 9PM</p>
+                    <p>На сцене MoizeNeck - трэп-метал артист с уникальным звучанием.</p>
                 </div>
                 <div class="event-card fade-in">
                     <div class="event-date"><i class="fas fa-calendar-alt"></i> -</div>
